--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb://adming39:123456@localhost:27017/dbg39
+spring.data.mongodb.uri=mongodb://adming39:123456@localhost:27017/dbprueba
 server.port=8080
